[gd_scene load_steps=8 format=3 uid="uid://b1ik2ctx5ysx4"]

[ext_resource type="Script" path="res://main.gd" id="1_6onwb"]
[ext_resource type="PackedScene" uid="uid://bop8ulvpw1vh5" path="res://scenes/game_scene.tscn" id="2_7f2hc"]
[ext_resource type="PackedScene" uid="uid://cik1otii6myr3" path="res://scenes/menus/game_over.tscn" id="2_cudxd"]
[ext_resource type="PackedScene" uid="uid://ixw4qiyfr64k" path="res://scenes/menus/options_menu.tscn" id="2_m1f2q"]
[ext_resource type="PackedScene" uid="uid://dsqthxqvefxlr" path="res://scenes/menus/pause_menu.tscn" id="4_1v7qq"]
[ext_resource type="PackedScene" uid="uid://dhgjyuu76ffv8" path="res://scenes/menus/main_menu.tscn" id="5_cnvbh"]
[ext_resource type="AudioStream" uid="uid://um8mmg471h7m" path="res://assets/sounds/mouse_hover.ogg" id="8_hjotm"]

[node name="main" type="Node2D"]
process_mode = 3
script = ExtResource("1_6onwb")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 1
anchor_mode = 0

[node name="GameScene" parent="." instance=ExtResource("2_7f2hc")]

[node name="button_switching" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hjotm")
volume_db = 20.662

[node name="Menus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOver" parent="Menus" instance=ExtResource("2_cudxd")]
layout_mode = 1

[node name="MainMenu" parent="Menus" instance=ExtResource("5_cnvbh")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -5.0
offset_right = 1023.0
offset_bottom = 896.0
grow_horizontal = 1
grow_vertical = 1

[node name="PauseMenu" parent="Menus" instance=ExtResource("4_1v7qq")]
visible = false
layout_mode = 1

[node name="OptionsMenu" parent="Menus" instance=ExtResource("2_m1f2q")]
visible = false
layout_mode = 1
offset_right = 984.0
offset_bottom = 856.0
